Fix layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,28 +6,18 @@ html {
 	box-sizing: border-box;
 	font-size: calc(1rem + 0.1vw);
 }
-
 *, *::before, *::after {
 	box-sizing: inherit;
 }
-
 body, td, th, p {
 	font-family: 'Karla', sans-serif;
 	color: #333;
 	line-height: 1.5;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: #f3f3f3;
 	margin: 0;
-	position: relative;
 }
-
-#page-wrapper {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
 a {
 	color: orange;
 	text-decoration: none;
@@ -40,10 +30,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
 	background-color: #f3f3f3;
-	min-height: 100%;
 }
 #footer {
 	width: 100%;
+	margin: 2rem 0 0;
 	background-color: #1B1F3B;
 	color: #F1FAEE;
 	font-size: .75rem;
@@ -229,11 +219,6 @@ font-size: 3rem;
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside #page-wrapper {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
 .inside #map-container {
 	width: 100%;
 	height: 25rem;
@@ -302,6 +287,9 @@ font-size: 3rem;
 	position: relative;
 	width: 100%;
 }
+#reviews-list li:last-child {
+	margin: 0;
+}
 #reviews-list li p {
 	padding: 0 1rem;
 	margin: 0;
@@ -313,7 +301,7 @@ font-size: 3rem;
 	color: #fff;
 }
 #reviews-list li p.review-date {
-	padding: .5rem 1rem 0;
+	padding: .6rem 1rem 0;
 	font-style: italic;
 }
 #reviews-list li p.rating {
@@ -335,6 +323,9 @@ font-size: 3rem;
 	/* ====================== Navigation ====================== */
 	nav {
 		height: 6rem;
+	}
+	.logo {
+		font-size: 3.6rem;
 	}
 
 	/* ====================== Restaurant Filtering ====================== */
@@ -399,9 +390,6 @@ font-size: 3rem;
 }
 
 @media screen and (min-width: 81.25rem)  {
-	.inside #maincontent {
-		height: auto;
-	}
 	/* ====================== Navigation ====================== */
 	#breadcrumb {
 		display: flex;
@@ -436,9 +424,5 @@ font-size: 3rem;
 	#restaurant-container {
 		width: 50%;
 		margin-right: 50%;
-
-	}
-	#reviews-container {
-		width: 50%;
 	}
 }
